k8s/apps/invidious/invidious.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  labels:
    app: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      labels:
        app: invidious
    spec:
      enableServiceLinks: false
      containers:
        - name: invidious
          image: quay.io/invidious/invidious:2026.09.30-1454ead@sha256:b86f06e1cfe6721f5bd0a375432c27859e572d0d365034f47a1b45f0739084c0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: invidious
spec:
  selector:
    app: invidious
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
spec:
  ingressClassName: traefik
  rules:
    - host: invidious.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invidious
                port:
                  number: 3000
